--- a/static/app.css
+++ b/static/app.css
@@ -1,84 +1,3 @@
-/*@font-face {*/
-/*  font-family: "Display";*/
-/*  font-style: normal;*/
-/*  font-weight: 700;*/
-/*  font-display: swap;*/
-/*  src: url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Bold.woff2) format("woff2"),*/
-/*    url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Bold.woff) format("woff");*/
-/*  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,*/
-/*    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;*/
-/*}*/
-
-/*@font-face {*/
-/*  font-family: "Display";*/
-/*  font-style: normal;*/
-/*  font-weight: 500;*/
-/*  font-display: swap;*/
-/*  src: url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Medium.woff2) format("woff2"),*/
-/*    url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Medium.woff) format("woff");*/
-/*  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,*/
-/*    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;*/
-/*}*/
-
-/*@font-face {*/
-/*  font-family: "Display";*/
-/*  font-style: normal;*/
-/*  font-weight: 400;*/
-/*  font-display: swap;*/
-/*  src: url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Regular.woff2) format("woff2"),*/
-/*    url(https://rogg-site.s3.eu-central-1.amazonaws.com/PD-Regular.woff) format("woff");*/
-/*  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,*/
-/*    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;*/
-/*}*/
-
-/*@font-face {*/
-/*  font-family: "IBM Plex Sans";*/
-/*  font-style: normal;*/
-/*  font-weight: 300;*/
-/*  font-display: swap;*/
-/*  src: url(https://fonts.gstatic.com/s/ibmplexsans/v14/zYX9KVElMYYaJe8bpLHnCwDKjXr8AIFsdP3pBms.woff2)*/
-/*    format("woff2");*/
-/*  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;*/
-/*}*/
-
-/*@font-face {*/
-/*  font-family: 'IBM Plex Sans';*/
-/*  font-style: normal;*/
-/*  font-weight: 400;*/
-/*  font-display: swap;*/
-/*  src: url(https://fonts.gstatic.com/s/ibmplexsans/v14/zYXgKVElMYYaJe8bpLHnCwDKhdHeFaxOedc.woff2) format('woff2');*/
-/*  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;*/
-/*}*/
-
-/*@font-face {*/
-/*  font-family: 'IBM Plex Sans';*/
-/*  font-style: normal;*/
-/*  font-weight: 500;*/
-/*  font-display: swap;*/
-/*  src: url(https://fonts.gstatic.com/s/ibmplexsans/v14/zYX9KVElMYYaJe8bpLHnCwDKjSL9AIFsdP3pBms.woff2) format('woff2');*/
-/*  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;*/
-/*}*/
-
-/*@font-face {*/
-/*  font-family: 'IBM Plex Sans';*/
-/*  font-style: normal;*/
-/*  font-weight: 600;*/
-/*  font-display: swap;*/
-/*  src: url(https://fonts.gstatic.com/s/ibmplexsans/v14/zYX9KVElMYYaJe8bpLHnCwDKjQ76AIFsdP3pBms.woff2) format('woff2');*/
-/*  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;*/
-/*}*/
-
-/*@font-face {*/
-/*  font-family: "Caveat";*/
-/*  font-style: normal;*/
-/*  font-weight: 400;*/
-/*  font-display: swap;*/
-/*  src: url(https://fonts.gstatic.com/s/caveat/v14/WnznHAc5bAfYB2QRah7pcpNvOx-pjfJ9eIWpZz5Kmgq3sw.woff)*/
-/*    format("woff");*/
-/*  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,*/
-/*    U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;*/
-/*}*/
-
 :root {
   --c-green: #93c700;
   --c-green-hover: #aeed00;
@@ -121,6 +40,8 @@
   --c-primary: #E66F25;
   --c-secondary: #FAF7F5;
   --c-bg: #FFFFFF;
+  --c-bg-hover: #e1dcd9;
+  --c-bg-active: #ccc7c3;
 }
 
 .dark {
@@ -138,6 +59,8 @@
   --c-primary: #608CFF;
   --c-secondary: #141b3d;
   --c-bg: #080C21;
+  --c-bg-hover: #0f142f;
+  --c-bg-active: #1a2249;
 }
 
 html,
